[tool.poetry]
name = "chat"
version = "0.1.0"
description = ""
authors = ["maguowei <imaguowei@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.1.8"
socksio = "^1.0.0"
gradio = "^4.36.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
